--- a/templates/details/nurse.html
+++ b/templates/details/nurse.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+{% block title %}ADOS - Upraviť sestru{% endblock %}
+
+{% block content %}
 <h1>Úprava sestry</h1>
 
 <div class="section">
@@ -49,6 +53,7 @@
         <button type="submit" class="btn warning">Vymazať</button>
     </form>
 </div>
+{% endblock %}
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/details/nurse.js') }}"></script>
