--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -126,6 +126,7 @@
     top: 100px;
     left: 100px;
     width: 70%;
+    height: 400px;
     max-width: calc(100vw - 32px);
     min-width: 300px;
     max-height: calc(100vh - 32px);
