--- a/templates/create/macro.html
+++ b/templates/create/macro.html
@@ -1,48 +1,40 @@
-{% extends "base.html" %}
-
-{% block title %}ADOS - nové{% endblock %}
-
-{% block content %}
-<h1>nové makro</h1>
-<div class="section">
-    <div class="lined-heading"><span>údaje</span></div>
-    <form id="macroForm">
-        <div class="form-group">
-            <label for="nazov">Názov</label>
-            <input type="text" id="nazov" name="nazov" placeholder="Názov" required>
-        </div>
-    
-        <div class="form-group">
-            <label for="skratka">Skratka</label>
-            <input type="text" id="skratka" name="skratka" placeholder="Skratka">
-        </div>
-    
-        <div class="half-form-group">
+<main-popup>
+    <h1>nové makro</h1>
+    <div class="section">
+        <div class="lined-heading"><span>údaje</span></div>
+        <form id="macroForm">
             <div class="form-group">
-                <label for="colorPicker">Farba</label>
-                <input type="color" id="colorPicker" name="colorPicker">
+                <label for="nazov">Názov</label>
+                <input type="text" id="nazov" name="nazov" placeholder="Názov" required>
             </div>
         
             <div class="form-group">
-                <input type="text" id="farba" name="farba" readonly>
+                <label for="skratka">Skratka</label>
+                <input type="text" id="skratka" name="skratka" placeholder="Skratka">
             </div>
-        </div>
-    
-        <div class="form-group">
-            <label for="text">Text makra</label>
-            <textarea id="text" name="text" placeholder="Text makra" rows="15" required></textarea>
-        </div>
-    
-        <button type="submit" class="btn">Pridať</button>
-    </form>
-</div>
+        
+            <div class="half-form-group">
+                <div class="form-group">
+                    <label for="colorPicker">Farba</label>
+                    <input type="color" id="colorPicker" name="colorPicker">
+                </div>
+            
+                <div class="form-group">
+                    <input type="text" id="farba" name="farba" readonly>
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <label for="text">Text makra</label>
+                <textarea id="text" name="text" placeholder="Text makra" rows="15" required></textarea>
+            </div>
+        
+            <button type="submit" class="btn">Pridať</button>
+        </form>
+    </div>
+</main-popup>
 
-{% endblock %}
 
 {% block styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/create/macro.css') }}">
-{% endblock %}
-
-{% block scripts %}
-<script src="{{ url_for('static', filename='js/create/macro.js') }}"></script>
 {% endblock %}
