--- a/templates/details/patient.html
+++ b/templates/details/patient.html
@@ -93,6 +93,11 @@
             <input type="number" name="cislo_dekurzu" value="{{ patient.cislo_dekurzu }}">
         </div>
 
+        <div class="form-group">
+            <label>Adresa na mape</label>
+            <div id="map" style="height: 300px;"></div>
+        </div>
+
         <button type="submit" class="btn">Uložiť</button>
     </form>
 
