--- a/templates/details/patients.html
+++ b/templates/details/patients.html
@@ -21,6 +21,10 @@
         {% endfor %}
     </div>
 
+    <a href="{{ url_for('patient.create_patient') }}"" class=" small-token outlined">
+        Pridať pacienta
+    </a>
+
 </div>
 {% endblock %}
 
